--- a/code-review-trainer-app/src/components/shared.less
+++ b/code-review-trainer-app/src/components/shared.less
@@ -57,4 +57,16 @@
       color: #e6e6e6;
     }
   }
+
+  .patch-purpose {
+    color: #e6e6e6;
+
+    strong {
+      color: #ffffff;
+    }
+
+    em {
+      color: #cccccc;
+    }
+  }
 }
